Problem solved : 단순히 출력 문제 였음, if 조건 안에서 index +1 처리 하였으나 이렇게되면 첫번째가 제일 클 경우에는 if 진입이 안되서 여전히 0으로 출력됨, 그냥 print에서 +1 하는 걸로 해결

--- a/Bronze/baekjoon_2562.ipynb
+++ b/Bronze/baekjoon_2562.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "name": "baekjoon_2562.ipynb",
-      "private_outputs": true,
       "provenance": [],
       "collapsed_sections": []
     },
@@ -20,30 +19,52 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "qgm7RVkhngoR"
+        "id": "qgm7RVkhngoR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1dbf3c12-ecff-41a8-c6c2-abd34ec34f6d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "29\n",
+            "38\n",
+            "12\n",
+            "57\n",
+            "74\n",
+            "40\n",
+            "85\n",
+            "61\n",
+            "85\n",
+            "8\n"
+          ]
+        }
+      ],
       "source": [
+        "n_list=[]\n",
         "\n",
         "#입력\n",
         "for i in range(9):\n",
         "  n=int(input())\n",
-        "  if n<100:\n",
-        "    list.append(n)\n",
+        "  n_list.append(n)\n",
         "\n",
         "#계산\n",
-        "max=list[0] # list[0]가 제일 크면\n",
+        "max=n_list[0] # n_list[0]가 제일 크면\n",
         "find=0\n",
-        "for n in list:\n",
+        "for n in n_list:\n",
         "  if max<n:\n",
         "    max=n\n",
-        "    find=list.index(max)+1\n",
-        "     \n",
+        "    find=n_list.index(max)\n",
+        "    \n",
         "#출력\n",
-        "print(int(max))\n",
-        "print(int(find))\n",
+        "print(max)\n",
+        "print(find+1)\n",
         "    "
       ]
     }
