cnt 변수선언 수정, 변수 sum  이름 수정

--- a/Bronze/baekjoon_4344.ipynb
+++ b/Bronze/baekjoon_4344.ipynb
@@ -19,13 +19,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 2,
       "metadata": {
         "id": "8y3kknL3sZyg",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6712cf64-4f55-4749-e797-b322768484f3"
+        "outputId": "2d75a910-f66e-4313-8821-f9fe850b748a"
       },
       "outputs": [
         {
@@ -47,6 +47,8 @@
         }
       ],
       "source": [
+        "cnt=0\n",
+        "c_sum=0\n",
         "temp=[]\n",
         "# 입력 개수\n",
         "c=int(input())\n",
@@ -55,9 +57,9 @@
         "  c_list=list(map(int,input().split()))\n",
         "\n",
         "  for j in c_list[1:]: # 학생 수 제외, 케이스 전체 더함\n",
-        "    sum+=j\n",
+        "    c_sum+=j\n",
         "\n",
-        "  avg=sum/c_list[0] # 케이스 평균 \n",
+        "  avg=c_sum/c_list[0] # 케이스 평균 \n",
         "\n",
         "  for x in c_list[1:]: # 평균보다 높은 케이스의 개수 \n",
         "    if x>avg:\n",
@@ -67,7 +69,7 @@
         "\n",
         "  temp.append(f) # 출력용 리스트\n",
         "\n",
-        "  sum=0 # 재사용 하기 위한 초기화\n",
+        "  c_sum=0 # 재사용 하기 위한 초기화\n",
         "  cnt=0\n",
         "# 출력\n",
         "for i in temp:\n",
